Add list to right header links and add section two

--- a/index.html
+++ b/index.html
@@ -12,17 +12,41 @@
         <div class="left-side">Header Logo</div>
 
         <div class="right-side">
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
     </header>
 
     <div class="cont-one">
-        <div class="info-head">This website is awesome</div>
-        <div class="info-text">Thiw website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <div class="main-title">This website is awesome</div>
+        <div class="main-text">Thiw website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <button>Sign up</button>
-        <div class="info-img">This is a placeholder for an image</div>
+        <div class="main-img">This is a placeholder for an image</div>
+    </div>
+
+    <div class="cont-two">
+        <div class="info-title">Some randome information</div>
+        <div class="cards-container">
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-txt">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-txt">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-txt">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-txt">This is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
