--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
             </div>
         </div>
     </div>
+
+    <div class="cont-three">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
+        <div class="sign">-Thor, God of Thunder</div>
+    </div>
+
+    
 </body>
 </html>
