Add footer section in html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <button>Sign up</button>
     </div>
 
-    
+    <footer>
+        <div class="foot-text">Copyrigh @ The Odin Project 2021</div>
+    </footer>
 
 
 </body>
