Style header bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="left-side">Header Logo</div>
+        <div class="logo">Header Logo</div>
 
         <div class="right-side">
             <ul>
@@ -66,7 +66,5 @@
     <footer>
         <div class="foot-text">Copyrigh @ The Odin Project 2021</div>
     </footer>
-
-
 </body>
 </html>
