--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     </header>
 
     <div class="cont-one">
-        <div class="main-title">This website is awesome</div>
-        <div class="main-text">Thiw website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button>Sign up</button>
-        <div class="main-img">This is a placeholder for an image</div>
+        <div class="one-left">
+            <div class="main-title">This website is awesome</div>
+            <div class="main-text">Thiw website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="button-one">Sign up</button>
+        </div>
+        
+        <div class="one right">
+            <div class="main-img">This is a placeholder for an image</div>
+        </div>
     </div>
 
     <div class="cont-two">
