--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="cont-one">
         <div class="one-left">
             <div class="main-title">This website is awesome</div>
-            <div class="main-text">Thiw website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div class="main-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <button class="button-one">Sign up</button>
         </div>
         
