Style third section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="cont-two">
-        <div class="info-title">Some randome information</div>
+        <div class="info-title">Some random information</div>
         <div class="cards-container">
             <div class="card">
                 <div class="card-img"></div>
@@ -61,8 +61,8 @@
 
     <div class="cont-four">
         <div class="four-text">
-            <div class="sign-title">Call to action! It's time!</div>
-            <div class="sign subtitle">Sign up for our product by clicking that button right over there!</div>
+            <div class="signup-title">Call to action! It's time!</div>
+            <div class="signup-subtitle">Sign up for our product by clicking that button right over there!</div>
         </div>
 
         <button>Sign up</button>
@@ -70,6 +70,7 @@
 
     <footer>
         <div class="foot-text">Copyrigh @ The Odin Project 2021</div>
+        <div class="img-copyright"><a href="https://www.freepik.com/free-vector/elegant-white-background-with-shiny-lines_4077186.htm#query=white%20background&position=0&from_view=keyword&track=ais">Image by starline</a> on Freepik</div>
     </footer>
 </body>
 </html>
