--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
 
     <div class="cont-four">
         <div class="four-text">
-            <div class="signup-title">Call to action! It's time!</div>
-            <div class="signup-subtitle">Sign up for our product by clicking that button right over there!</div>
+            <div class="signup">
+                <div class="signup-title">Call to action! It's time!</div>
+                <div class="signup-subtitle">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="button-four">Sign up</button>
         </div>
 
-        <button>Sign up</button>
+        
     </div>
 
     <footer>
