Fix section two content centering and add readme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">Header Logo</div>
 
-        <div class="right-side">
+        <div class="header-link">
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
